Fixed z-index issue

--- a/assets/css/_graphs.scss
+++ b/assets/css/_graphs.scss
@@ -46,6 +46,7 @@ svg{
 		font-size:$size-4;
 		left:0px;
 		top:$size-3;
+		z-index:5;		
 	}
 }
 
